api/myapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapi-deployment
  namespace: myapi
spec:
  selector:
    matchLabels:
      app: myapi
  template:
    metadata:
      labels:
        app: myapi
    spec:
      containers:
        - name: myapi
          image: myapi:latest
          # Remove `imagePullPolicy` if image will be pulled from remote repository
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
# ---
# # External Service
# apiVersion: v1
# kind: Service
# metadata:
#   name: myapi-service
#   namespace: myapi
# spec:
#   selector:
#     app: myapi
#   type: LoadBalancer
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
#       nodePort: 30001
---
# Internal Service
apiVersion: v1
kind: Service
metadata:
  name: myapi-service
  namespace: myapi
spec:
  selector:
    app: myapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
