api/myapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapi-ingress
  labels:
    name: myapi-ingress
  namespace: myapi
spec:
  rules:
    - host: myapi.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapi-service
                port:
                  number: 8080
